Changed some colors and added a paragraph about me

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
   <!-- About You -->
   <main>
     <section class="about">
-      <p>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed sapien quam. Sed dapibus est id enim facilisis,
-        at posuere turpis adipiscing. Quisque sit amet dui dui
+      <p> Hello I am Sola,i am an amatuer front end programmer and i take interest in learning stacks like Javascript react, css(scss,less), also some backend stacks like php, python and node js. If you are willing to teach, I am ready to learn and will be excited to learn from you. Also i am a fast learner so i won't give you much problem.
       </p>
     </section>
     <!-- Your Projects -->
